fix - sidenav collapsed: fix width in anchore items

--- a/src/app/shared/ui/sidenav/sidenav-item/sidenav-item.component.scss
+++ b/src/app/shared/ui/sidenav/sidenav-item/sidenav-item.component.scss
@@ -13,6 +13,8 @@
     align-items: center;
     border-radius: 0.375rem;
     cursor: pointer;
+    width: calc(100% - 2rem);
+    transition: width var(--transition-duration) var(--transition-function);
 
     &.active {
       background-color: var(--primary);
