--- a/src/app/shared/ui/sidenav/sidenav.component.scss
+++ b/src/app/shared/ui/sidenav/sidenav.component.scss
@@ -49,6 +49,10 @@
       }
 
       .llama-sidenav-item {
+        & > a {
+          width: calc(100% - 1rem);
+        }
+
         &__children {
           display: none;
         }
